--- a/ass3/templates/home.html
+++ b/ass3/templates/home.html
@@ -3,7 +3,7 @@
 <h3><a href="/enternew">Add Food</a></h3>
 <h3><a href="/favorite">Favorite food</a></h3>
 <form action="/search" method="GET">
-  <input type="text" name="word" value="">
+  <input type="text" name="name" value="">
   <input type="submit">
 </form>
 <br>
